--- a/src/br/ufrpe/zoologico/gui/grafica/FXML/GerenciamentoAnimal.fxml
+++ b/src/br/ufrpe/zoologico/gui/grafica/FXML/GerenciamentoAnimal.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ufrpe.zoologico.gui.grafica.controller.GerenciarAnimalController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ufrpe.zoologico.gui.grafica.controller.GerenciarAnimalController">
    <children>
       <TableView fx:id="tbEspecie" layoutX="72.0" layoutY="110.0" prefHeight="200.0" prefWidth="260.0">
         <columns>
@@ -104,17 +104,12 @@
             <Font size="36.0" />
          </font>
       </Button>
-      <Button layoutX="754.0" layoutY="593.0" mnemonicParsing="false" prefHeight="77.0" prefWidth="180.0" text="Alterar">
+      <Button disable="true" layoutX="550.0" layoutY="593.0" mnemonicParsing="false" onAction="#alterar" prefHeight="77.0" prefWidth="180.0" text="Alterar">
          <font>
             <Font size="36.0" />
          </font>
       </Button>
-      <Button layoutX="537.0" layoutY="593.0" mnemonicParsing="false" prefHeight="77.0" prefWidth="180.0" text="Buscar">
-         <font>
-            <Font size="36.0" />
-         </font>
-      </Button>
-      <Button layoutX="273.0" layoutY="593.0" mnemonicParsing="false" prefHeight="77.0" prefWidth="236.0" text="Remover">
+      <Button layoutX="273.0" layoutY="593.0" mnemonicParsing="false" onAction="#remover" prefHeight="77.0" prefWidth="236.0" text="Remover">
          <font>
             <Font size="36.0" />
          </font>
@@ -124,7 +119,7 @@
             <Font size="36.0" />
          </font>
       </Button>
-      <Button layoutX="1027.0" layoutY="387.0" mnemonicParsing="false" text="ZERAR">
+      <Button fx:id="salvarAlteracao" disable="true" layoutX="1025.0" layoutY="593.0" mnemonicParsing="false" onAction="#salvarAlteracao" text="Salvar" visible="false">
          <font>
             <Font size="36.0" />
          </font>
