--- a/src/br/ufrpe/zoologico/gui/grafica/FXML/CadastroProduto.fxml
+++ b/src/br/ufrpe/zoologico/gui/grafica/FXML/CadastroProduto.fxml
@@ -2,13 +2,13 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ufrpe.zoologico.gui.grafica.controller.CadastroProdutoController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ufrpe.zoologico.gui.grafica.controller.CadastroProdutoController">
    <children>
       <TextField fx:id="descricaoTextField" layoutX="429.0" layoutY="191.0" promptText="Nome Usual">
          <font>
@@ -20,30 +20,12 @@
             <Font size="24.0" />
          </font>
       </TextField>
-      <MenuButton fx:id="freqPedidoMnuBtn" layoutX="429.0" layoutY="350.0" mnemonicParsing="false" text="Frequência do pedido">
-        <items>
-            <MenuItem fx:id="zeroMnuItm" mnemonicParsing="false" text="0" />
-            <MenuItem fx:id="umMnuItm" mnemonicParsing="false" text="1" />
-            <MenuItem fx:id="doisMnuItm" mnemonicParsing="false" text="2" />
-            <MenuItem fx:id="tresMnuItm" mnemonicParsing="false" text="3" />
-            <MenuItem fx:id="quatroMnuItm" mnemonicParsing="false" text="4" />
-            <MenuItem fx:id="cincoMnuItm" mnemonicParsing="false" text="5" />
-            <MenuItem fx:id="seisMnuItm" mnemonicParsing="false" text="6" />
-            <MenuItem fx:id="seteMnuItm" mnemonicParsing="false" text="7" />
-            <MenuItem fx:id="oitoMnuItm" mnemonicParsing="false" text="8" />
-            <MenuItem fx:id="noveMnuItm" mnemonicParsing="false" text="9" />
-            <MenuItem fx:id="dezMnuItm" mnemonicParsing="false" text="10" />
-        </items>
-      </MenuButton>
       <TextField fx:id="qtdMinTextField" layoutX="429.0" layoutY="409.0" promptText="Apenas Números">
          <font>
             <Font size="24.0" />
          </font>
       </TextField>
-      <MenuButton fx:id="categMnuBtn" layoutX="429.0" layoutY="496.0" mnemonicParsing="false" text="Categ" />
-      <MenuButton fx:id="subcategoriaMnuBtn" disable="true" layoutX="727.0" layoutY="496.0" mnemonicParsing="false" text="Subcategoria" />
-      <MenuButton fx:id="fornecedorMnuBtn" layoutX="429.0" layoutY="569.0" mnemonicParsing="false" text="Fornecedor" />
-      <Button layoutX="835.0" layoutY="555.0" mnemonicParsing="false" onAction="#confirmarCadastro" text="Confirmar Cadastro">
+      <Button fx:id="confirmarCadastro" layoutX="1025.0" layoutY="604.0" mnemonicParsing="false" onAction="#confirmarCadastro" prefHeight="77.0" prefWidth="218.0" text="Confirmar">
          <font>
             <Font size="36.0" />
          </font>
@@ -78,20 +60,64 @@
             <Font size="30.0" />
          </font>
       </Label>
-      <Label layoutX="259.0" layoutY="486.0" text="Categoria:">
+      <TableView fx:id="tbCateg" layoutX="774.0" layoutY="190.0" prefHeight="278.0" prefWidth="218.0">
+        <columns>
+          <TableColumn fx:id="tcIdCateg" prefWidth="43.0" text="ID" />
+          <TableColumn fx:id="tcCateg" prefWidth="174.0" text="Categoria" />
+        </columns>
+      </TableView>
+      <TableView fx:id="tbSubCateg" layoutX="1037.0" layoutY="190.0" prefHeight="278.0" prefWidth="218.0">
+        <columns>
+          <TableColumn fx:id="tcIdSubCateg" prefWidth="40.0" text="ID" />
+          <TableColumn fx:id="tcSubCateg" prefWidth="177.0" text="Sub_Categoria" />
+        </columns>
+      </TableView>
+      <TextField fx:id="freqPedido" layoutX="429.0" layoutY="337.0" promptText="Apenas Números">
          <font>
-            <Font size="30.0" />
+            <Font size="24.0" />
          </font>
-      </Label>
-      <Label layoutX="239.0" layoutY="559.0" text="Fornecedor:">
+      </TextField>
+      <TableView fx:id="tbFornecedor" layoutX="128.0" layoutY="468.0" prefHeight="200.0" prefWidth="382.0">
+        <columns>
+          <TableColumn fx:id="tcIdFornecedor" prefWidth="43.0" text="ID" />
+          <TableColumn fx:id="tcNome" prefWidth="153.0" text="Fornecedor" />
+            <TableColumn fx:id="tcCnpj" prefWidth="185.0" text="CNPJ" />
+        </columns>
+      </TableView>
+      <Button layoutX="542.0" layoutY="491.0" mnemonicParsing="false" onAction="#ir" text="&lt;">
          <font>
-            <Font size="30.0" />
+            <Font size="36.0" />
          </font>
-      </Label>
-      <Label layoutX="522.0" layoutY="486.0" text="Subcategoria:">
+      </Button>
+      <Button layoutX="640.0" layoutY="491.0" mnemonicParsing="false" onAction="#retornar" text="&gt;">
          <font>
-            <Font size="30.0" />
+            <Font size="36.0" />
          </font>
-      </Label>
+      </Button>
+      <Button layoutX="516.0" layoutY="617.0" mnemonicParsing="false" onAction="#inserir" prefHeight="51.0" prefWidth="118.0" text="Inserir">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Button>
+      <Button layoutX="670.0" layoutY="617.0" mnemonicParsing="false" onAction="#remover" prefHeight="51.0" prefWidth="128.0" text="Remover">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Button>
+      <Button layoutX="824.0" layoutY="617.0" mnemonicParsing="false" onAction="#alterar" prefHeight="51.0" prefWidth="118.0" text="Alterar">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Button>
+      <Button fx:id="confirmarAlteracao" layoutX="790.0" layoutY="514.0" mnemonicParsing="false" onAction="#confirmarAlteracao" prefHeight="77.0" prefWidth="218.0" text="Confirmar">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Button>
+      <Button fx:id="confirmarRemorcao" layoutX="1025.0" layoutY="514.0" mnemonicParsing="false" onAction="#confirmarRemorcao" prefHeight="77.0" prefWidth="218.0" text="Confirmar">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
