--- a/src/br/ufrpe/zoologico/gui/grafica/FXML/CadastroProduto.fxml
+++ b/src/br/ufrpe/zoologico/gui/grafica/FXML/CadastroProduto.fxml
@@ -25,7 +25,7 @@
             <Font size="24.0" />
          </font>
       </TextField>
-      <Button fx:id="confirmarCadastro" layoutX="1025.0" layoutY="604.0" mnemonicParsing="false" onAction="#confirmarCadastro" prefHeight="77.0" prefWidth="218.0" text="Confirmar">
+      <Button fx:id="confirmarCadastro" disable="true" layoutX="1025.0" layoutY="604.0" mnemonicParsing="false" onAction="#confirmarCadastro" prefHeight="77.0" prefWidth="218.0" text="Confirmar" visible="false">
          <font>
             <Font size="36.0" />
          </font>
@@ -109,15 +109,20 @@
             <Font size="24.0" />
          </font>
       </Button>
-      <Button fx:id="confirmarAlteracao" layoutX="790.0" layoutY="514.0" mnemonicParsing="false" onAction="#confirmarAlteracao" prefHeight="77.0" prefWidth="218.0" text="Confirmar">
+      <Button fx:id="confirmarAlteracao" disable="true" layoutX="1025.0" layoutY="604.0" mnemonicParsing="false" onAction="#confirmarAlteracao" prefHeight="77.0" prefWidth="218.0" text="Confirmar" visible="false">
          <font>
             <Font size="36.0" />
          </font>
       </Button>
-      <Button fx:id="confirmarRemorcao" layoutX="1025.0" layoutY="514.0" mnemonicParsing="false" onAction="#confirmarRemorcao" prefHeight="77.0" prefWidth="218.0" text="Confirmar">
+      <Button fx:id="confirmarRemorcao" disable="true" layoutX="1025.0" layoutY="604.0" mnemonicParsing="false" onAction="#confirmarRemorcao" prefHeight="77.0" prefWidth="218.0" text="Confirmar" visible="false">
          <font>
             <Font size="36.0" />
          </font>
       </Button>
+      <TextField fx:id="idProduto" disable="true" layoutX="330.0" layoutY="139.0" prefHeight="51.0" prefWidth="80.0" promptText="ID" visible="false">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </TextField>
    </children>
 </AnchorPane>
