Remover fatura pronto.
Diria que Tipo 3 serviço está pronto

--- a/src/br/ufrpe/zoologico/gui/grafica/FXML/GerenciarServicos.fxml
+++ b/src/br/ufrpe/zoologico/gui/grafica/FXML/GerenciarServicos.fxml
@@ -126,6 +126,11 @@
                         <Font size="18.0" />
                      </font>
                   </Button>
+                  <Button layoutX="1113.0" layoutY="151.0" mnemonicParsing="false" onAction="#removerFatura" text="Remover Fatura">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
                </children></AnchorPane>
       </content>
     </Tab>
