--- a/src/br/ufrpe/zoologico/gui/grafica/FXML/CadastroProduto.fxml
+++ b/src/br/ufrpe/zoologico/gui/grafica/FXML/CadastroProduto.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ufrpe.zoologico.gui.grafica.controller.CadastroProdutoController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ufrpe.zoologico.gui.grafica.controller.CadastroProdutoController">
    <children>
       <TextField fx:id="descricaoTextField" layoutX="429.0" layoutY="191.0" promptText="Nome Usual">
          <font>
@@ -84,12 +84,12 @@
             <TableColumn fx:id="tcCnpj" prefWidth="185.0" text="CNPJ" />
         </columns>
       </TableView>
-      <Button layoutX="542.0" layoutY="491.0" mnemonicParsing="false" onAction="#ir" text="&lt;">
+      <Button layoutX="542.0" layoutY="491.0" mnemonicParsing="false" onAction="#retornar" text="&lt;">
          <font>
             <Font size="36.0" />
          </font>
       </Button>
-      <Button layoutX="640.0" layoutY="491.0" mnemonicParsing="false" onAction="#retornar" text="&gt;">
+      <Button layoutX="640.0" layoutY="491.0" mnemonicParsing="false" onAction="#ir" text="&gt;">
          <font>
             <Font size="36.0" />
          </font>
