--- a/src/br/ufrpe/zoologico/gui/grafica/FXML/Admin.fxml
+++ b/src/br/ufrpe/zoologico/gui/grafica/FXML/Admin.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ufrpe.zoologico.gui.grafica.controller.AdminController">
+<VBox prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ufrpe.zoologico.gui.grafica.controller.AdminController">
 	<children>
 		<AnchorPane>
 			<children>
@@ -46,62 +46,62 @@
 						<Font size="14.0" />
 					</font>
 				</Label>
-				<Button layoutX="325.0" layoutY="213.0" mnemonicParsing="false" onAction="#abrirTelaInstituicoes" text="Instituição">
+				<Button layoutX="325.0" layoutY="213.0" mnemonicParsing="false" onAction="#abrirTelaInstituicoes" stylesheets="@../../button.css" text="Instituição">
 					<font>
 						<Font size="18.0" />
 					</font>
 				</Button>
-				<Button layoutX="315.0" layoutY="278.0" mnemonicParsing="false" onAction="#abrirTelaFuncionario" text="Funcionário">
+				<Button layoutX="315.0" layoutY="278.0" mnemonicParsing="false" onAction="#abrirTelaFuncionario" stylesheets="@../../button.css" text="Funcionário">
 					<font>
 						<Font size="18.0" />
 					</font>
 				</Button>
-				<Button layoutX="340.0" layoutY="356.0" mnemonicParsing="false" onAction="#abrirTelaJaula" text="Jaula">
+				<Button layoutX="340.0" layoutY="356.0" mnemonicParsing="false" onAction="#abrirTelaJaula" stylesheets="@../../button.css" text="Jaula">
 					<font>
 						<Font size="18.0" />
 					</font>
 				</Button>
-				<Button layoutX="329.0" layoutY="419.0" mnemonicParsing="false" onAction="#abrirTelaProduto" text="Produto">
+				<Button layoutX="329.0" layoutY="419.0" mnemonicParsing="false" onAction="#abrirTelaProduto" stylesheets="@../../button.css" text="Produto">
 					<font>
 						<Font size="18.0" />
 					</font>
 				</Button>
-				<Button layoutX="572.0" layoutY="213.0" mnemonicParsing="false" onAction="#abrirZoologico" text="Zoológico">
+				<Button layoutX="572.0" layoutY="213.0" mnemonicParsing="false" onAction="#abrirZoologico" stylesheets="@../../button.css" text="Zoológico">
 					<font>
 						<Font size="18.0" />
 					</font>
 				</Button>
-				<Button layoutX="585.0" layoutY="280.0" mnemonicParsing="false" onAction="#abrirTelaAnimal" text="Animal">
+				<Button layoutX="585.0" layoutY="280.0" mnemonicParsing="false" onAction="#abrirTelaAnimal" stylesheets="@../../button.css" text="Animal">
 					<font>
 						<Font size="18.0" />
 					</font>
 				</Button>
-				<Button layoutX="577.0" layoutY="354.0" mnemonicParsing="false" onAction="#abrirTelaConsulta" text="Consulta">
+				<Button layoutX="577.0" layoutY="354.0" mnemonicParsing="false" onAction="#abrirTelaConsulta" stylesheets="@../../button.css" text="Consulta">
 					<font>
 						<Font size="18.0" />
 					</font>
 				</Button>
-				<Button disable="true" layoutX="580.0" layoutY="422.0" mnemonicParsing="false" onAction="#abrirTelaReserva" text="Reserva">
+				<Button disable="true" layoutX="580.0" layoutY="422.0" mnemonicParsing="false" onAction="#abrirTelaReserva" stylesheets="@../../button.css" text="Reserva">
 					<font>
 						<Font size="18.0" />
 					</font>
 				</Button>
-				<Button layoutX="821.0" layoutY="212.0" mnemonicParsing="false" onAction="#abrirTelaAnimal_Item" text="Animal-Item">
+				<Button layoutX="821.0" layoutY="212.0" mnemonicParsing="false" onAction="#abrirTelaAnimal_Item" stylesheets="@../../button.css" text="Animal-Item">
 					<font>
 						<Font size="18.0" />
 					</font>
 				</Button>
-				<Button disable="true" layoutX="819.0" layoutY="282.0" mnemonicParsing="false" onAction="#abrirTelaJaula_Animal" text="Jaula-Animal">
+				<Button disable="true" layoutX="819.0" layoutY="282.0" mnemonicParsing="false" onAction="#abrirTelaJaula_Animal" stylesheets="@../../button.css" text="Jaula-Animal">
 					<font>
 						<Font size="18.0" />
 					</font>
 				</Button>
-				<Button layoutX="811.0" layoutY="352.0" mnemonicParsing="false" onAction="#abrirTelaServico_Faturas" text="Serviço-Faturas">
+				<Button layoutX="811.0" layoutY="352.0" mnemonicParsing="false" onAction="#abrirTelaServico_Faturas" stylesheets="@../../button.css" text="Serviço-Faturas">
 					<font>
 						<Font size="18.0" />
 					</font>
 				</Button>
-				<Button layoutX="838.0" layoutY="424.0" mnemonicParsing="false" onAction="#abrirTelaEstoque" text="Estoque">
+				<Button layoutX="838.0" layoutY="424.0" mnemonicParsing="false" onAction="#abrirTelaEstoque" stylesheets="@../../button.css" text="Estoque">
 					<font>
 						<Font size="18.0" />
 					</font>
