--- a/src/br/ufrpe/zoologico/gui/grafica/FXML/CadastrarConsultas.fxml
+++ b/src/br/ufrpe/zoologico/gui/grafica/FXML/CadastrarConsultas.fxml
@@ -12,20 +12,13 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity"
-	minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0"
-	prefWidth="1280.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="br.ufrpe.zoologico.gui.grafica.controller.GerenciarConsultasController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ufrpe.zoologico.gui.grafica.controller.GerenciarConsultasController">
 	<children>
-		<TabPane prefHeight="720.0" prefWidth="1280.0"
-			tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0"
-			AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-			AnchorPane.topAnchor="0.0">
+		<TabPane prefHeight="720.0" prefWidth="1280.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 			<tabs>
 				<Tab text="Gerenciar">
 					<content>
-						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0"
-							prefWidth="200.0">
+						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
 							<children>
 								<Label layoutX="152.0" layoutY="217.0" text="Médico:">
 									<font>
@@ -52,78 +45,59 @@
 										<Font size="24.0" />
 									</font>
 								</Label>
-								<Label fx:id="idConsultaLabel" layoutX="303.0" layoutY="163.0"
-									text="-">
+								<Label fx:id="idConsultaLabel" layoutX="303.0" layoutY="163.0" text="-">
 									<font>
 										<Font size="24.0" />
 									</font>
 								</Label>
-								<Label fx:id="nomeMedicoLabel" alignment="TOP_LEFT"
-									layoutX="252.0" layoutY="220.0" prefHeight="75.0" prefWidth="230.0"
-									text="-" wrapText="true">
+								<Label fx:id="nomeMedicoLabel" alignment="TOP_LEFT" layoutX="252.0" layoutY="220.0" prefHeight="75.0" prefWidth="230.0" text="-" wrapText="true">
 									<font>
 										<Font size="24.0" />
 									</font>
 								</Label>
-								<Label fx:id="nomeAnimalLabel" layoutX="253.0" layoutY="302.0"
-									text="-">
+								<Label fx:id="nomeAnimalLabel" layoutX="253.0" layoutY="302.0" text="-">
 									<font>
 										<Font size="24.0" />
 									</font>
 								</Label>
-								<Label fx:id="horarioLabel" layoutX="258.0" layoutY="349.0"
-									text="-">
+								<Label fx:id="horarioLabel" layoutX="258.0" layoutY="349.0" text="-">
 									<font>
 										<Font size="24.0" />
 									</font>
 								</Label>
-								<Label fx:id="obsLabel" alignment="TOP_LEFT"
-									contentDisplay="TOP" layoutX="234.0" layoutY="409.0"
-									prefHeight="157.0" prefWidth="216.0" text="-" wrapText="true">
+								<Label fx:id="obsLabel" alignment="TOP_LEFT" contentDisplay="TOP" layoutX="234.0" layoutY="409.0" prefHeight="157.0" prefWidth="216.0" text="-" wrapText="true">
 									<font>
 										<Font size="18.0" />
 									</font>
 								</Label>
-								<Button layoutX="391.0" layoutY="583.0" mnemonicParsing="false"
-									onAction="#proximo" text="Próximo">
+								<Button layoutX="391.0" layoutY="583.0" mnemonicParsing="false" onAction="#proximo" text="Próximo">
 									<font>
 										<Font size="24.0" />
 									</font>
 								</Button>
-								<Button layoutX="103.0" layoutY="582.0" mnemonicParsing="false"
-									onAction="#anterior" text="Anterior">
+								<Button layoutX="103.0" layoutY="582.0" mnemonicParsing="false" onAction="#anterior" text="Anterior">
 									<font>
 										<Font size="24.0" />
 									</font>
 								</Button>
-								<Button layoutX="265.0" layoutY="581.0" mnemonicParsing="false"
-									onAction="#editar" text="Editar">
+								<Button layoutX="265.0" layoutY="581.0" mnemonicParsing="false" onAction="#editar" text="Editar">
 									<font>
 										<Font size="24.0" />
 									</font>
 								</Button>
-								<TableView fx:id="tabelaAnimais1" layoutX="584.0"
-									layoutY="89.0" onMouseClicked="#selecionarAnimal1" prefHeight="145.0"
-									prefWidth="289.0">
+								<TableView fx:id="tabelaAnimais1" layoutX="584.0" layoutY="89.0" onMouseClicked="#selecionarAnimal1" prefHeight="145.0" prefWidth="289.0">
 									<columns>
-										<TableColumn fx:id="colunaNomeAnimal1" prefWidth="143.4897003173828"
-											text="Nome" />
-										<TableColumn fx:id="colunaIdAnimal1" prefWidth="144.51031494140625"
-											text="ID" />
+										<TableColumn fx:id="colunaNomeAnimal1" prefWidth="143.4897003173828" text="Nome" />
+										<TableColumn fx:id="colunaIdAnimal1" prefWidth="144.51031494140625" text="ID" />
 									</columns>
 								</TableView>
-								<TableView fx:id="tabelaVeterinarios1" layoutX="589.0"
-									layoutY="312.0" onMouseClicked="#selecionarVeterinario1"
-									prefHeight="145.0" prefWidth="289.0">
+								<TableView fx:id="tabelaVeterinarios1" layoutX="589.0" layoutY="312.0" onMouseClicked="#selecionarVeterinario1" prefHeight="145.0" prefWidth="289.0">
 									<columns>
-										<TableColumn fx:id="colunaNomeVeterinario1"
-											prefWidth="143.4897003173828" text="Nome" />
-										<TableColumn fx:id="colunaCpfVeterinario1"
-											prefWidth="144.51031494140625" text="CPF" />
+										<TableColumn fx:id="colunaNomeVeterinario1" prefWidth="143.4897003173828" text="Nome" />
+										<TableColumn fx:id="colunaCpfVeterinario1" prefWidth="144.51031494140625" text="CPF" />
 									</columns>
 								</TableView>
-								<DatePicker fx:id="dataDaConsultaDatePicker1"
-									layoutX="967.0" layoutY="173.0" prefHeight="41.0" prefWidth="219.0" />
+								<DatePicker fx:id="dataDaConsultaDatePicker1" layoutX="967.0" layoutY="173.0" prefHeight="41.0" prefWidth="219.0" />
 								<Label layoutX="933.0" layoutY="102.0" text="Data da Consulta">
 									<font>
 										<Font size="36.0" />
@@ -134,8 +108,7 @@
 										<Font size="36.0" />
 									</font>
 								</Label>
-								<TextArea fx:id="observacoesTextField1" layoutX="906.0"
-									layoutY="327.0" prefHeight="109.0" prefWidth="354.0" wrapText="true" />
+								<TextArea fx:id="observacoesTextField1" layoutX="906.0" layoutY="327.0" prefHeight="109.0" prefWidth="354.0" wrapText="true" />
 								<Label layoutX="638.0" layoutY="257.0" text="Veterinários">
 									<font>
 										<Font size="36.0" />
@@ -146,20 +119,17 @@
 										<Font size="36.0" />
 									</font>
 								</Label>
-								<Button layoutX="854.0" layoutY="529.0" mnemonicParsing="false"
-									onAction="#salvar" text="Salvar">
+								<Button layoutX="854.0" layoutY="529.0" mnemonicParsing="false" onAction="#salvar" text="Salvar">
 									<font>
 										<Font size="24.0" />
 									</font>
 								</Button>
-								<TextField fx:id="horaTextField1" layoutX="984.0"
-									layoutY="220.0" prefHeight="39.0" prefWidth="66.0" promptText="Hora">
+								<TextField fx:id="horaTextField1" layoutX="984.0" layoutY="220.0" prefHeight="39.0" prefWidth="66.0" promptText="Hora">
 									<font>
 										<Font size="18.0" />
 									</font>
 								</TextField>
-								<TextField fx:id="minutoTextField1" layoutX="1092.0"
-									layoutY="221.0" prefHeight="39.0" prefWidth="80.0" promptText="Minuto">
+								<TextField fx:id="minutoTextField1" layoutX="1092.0" layoutY="221.0" prefHeight="39.0" prefWidth="80.0" promptText="Minuto">
 									<font>
 										<Font size="18.0" />
 									</font>
@@ -169,33 +139,29 @@
 										<Font size="36.0" />
 									</font>
 								</Label>
+                        <Button layoutX="1065.0" layoutY="19.0" mnemonicParsing="false" onAction="#voltar" text="Voltar">
+                           <font>
+                              <Font size="36.0" />
+                           </font>
+                        </Button>
 							</children>
 						</AnchorPane>
 					</content>
 				</Tab>
 				<Tab text="Cadastro">
 					<content>
-						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="720.0"
-							prefWidth="1280.0">
+						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="720.0" prefWidth="1280.0">
 							<children>
-								<TableView fx:id="tabelaVeterinarios" layoutX="451.0"
-									layoutY="195.0" onMouseClicked="#selecionarVeterinario"
-									prefHeight="431.0" prefWidth="289.0">
+								<TableView fx:id="tabelaVeterinarios" layoutX="451.0" layoutY="195.0" onMouseClicked="#selecionarVeterinario" prefHeight="431.0" prefWidth="289.0">
 									<columns>
-										<TableColumn fx:id="colunaNomeVeterinario"
-											prefWidth="143.4897003173828" text="Nome" />
-										<TableColumn fx:id="colunaCpfVeterinario"
-											prefWidth="144.51031494140625" text="CPF" />
+										<TableColumn fx:id="colunaNomeVeterinario" prefWidth="143.4897003173828" text="Nome" />
+										<TableColumn fx:id="colunaCpfVeterinario" prefWidth="144.51031494140625" text="CPF" />
 									</columns>
 								</TableView>
-								<TableView fx:id="tabelaAnimais" layoutX="112.0"
-									layoutY="193.0" onMouseClicked="#selecionarAnimal" prefHeight="431.0"
-									prefWidth="289.0">
+								<TableView fx:id="tabelaAnimais" layoutX="112.0" layoutY="193.0" onMouseClicked="#selecionarAnimal" prefHeight="431.0" prefWidth="289.0">
 									<columns>
-										<TableColumn fx:id="colunaNomeAnimal" prefWidth="143.4897003173828"
-											text="Nome" />
-										<TableColumn fx:id="colunaIdAnimal" prefWidth="144.51031494140625"
-											text="ID" />
+										<TableColumn fx:id="colunaNomeAnimal" prefWidth="143.4897003173828" text="Nome" />
+										<TableColumn fx:id="colunaIdAnimal" prefWidth="144.51031494140625" text="ID" />
 									</columns>
 								</TableView>
 								<Label layoutX="503.0" layoutY="140.0" text="Veterinários">
@@ -208,8 +174,7 @@
 										<Font size="36.0" />
 									</font>
 								</Label>
-								<DatePicker fx:id="dataDaConsultaDatePicker" layoutX="790.0"
-									layoutY="281.0" prefHeight="41.0" prefWidth="219.0" />
+								<DatePicker fx:id="dataDaConsultaDatePicker" layoutX="790.0" layoutY="281.0" prefHeight="41.0" prefWidth="219.0" />
 								<Label layoutX="859.0" layoutY="214.0" text="Data da Consulta">
 									<font>
 										<Font size="36.0" />
@@ -220,16 +185,13 @@
 										<Font size="36.0" />
 									</font>
 								</Label>
-								<TextArea fx:id="observacoesTextField" layoutX="823.0"
-									layoutY="405.0" prefHeight="109.0" prefWidth="354.0" wrapText="true" />
-								<Button layoutX="808.0" layoutY="541.0" mnemonicParsing="false"
-									onAction="#cadastrarConsulta" text="Cadastrar Consulta">
+								<TextArea fx:id="observacoesTextField" layoutX="823.0" layoutY="405.0" prefHeight="109.0" prefWidth="354.0" wrapText="true" />
+								<Button layoutX="808.0" layoutY="541.0" mnemonicParsing="false" onAction="#cadastrarConsulta" text="Cadastrar Consulta">
 									<font>
 										<Font size="36.0" />
 									</font>
 								</Button>
-								<Button layoutX="1065.0" layoutY="19.0" mnemonicParsing="false"
-									onAction="#voltar" text="Voltar">
+								<Button layoutX="1065.0" layoutY="19.0" mnemonicParsing="false" onAction="#voltar" text="Voltar">
 									<font>
 										<Font size="36.0" />
 									</font>
@@ -239,14 +201,12 @@
 										<Font size="48.0" />
 									</font>
 								</Label>
-								<TextField fx:id="horaTextField" layoutX="1046.0"
-									layoutY="280.0" prefHeight="39.0" prefWidth="66.0" promptText="Hora">
+								<TextField fx:id="horaTextField" layoutX="1046.0" layoutY="280.0" prefHeight="39.0" prefWidth="66.0" promptText="Hora">
 									<font>
 										<Font size="18.0" />
 									</font>
 								</TextField>
-								<TextField fx:id="minutoTextField" layoutX="1154.0"
-									layoutY="281.0" prefHeight="39.0" prefWidth="80.0" promptText="Minuto">
+								<TextField fx:id="minutoTextField" layoutX="1154.0" layoutY="281.0" prefHeight="39.0" prefWidth="80.0" promptText="Minuto">
 									<font>
 										<Font size="18.0" />
 									</font>
@@ -262,27 +222,18 @@
 				</Tab>
 				<Tab text="Remoção">
 					<content>
-						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0"
-							prefWidth="200.0">
+						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
 							<children>
-								<TableView fx:id="tabelaConsultasRemover" layoutX="171.0"
-									layoutY="183.0" onMouseClicked="#selecionarConsultaRemover"
-									prefHeight="428.0" prefWidth="486.0">
+								<TableView fx:id="tabelaConsultasRemover" layoutX="171.0" layoutY="183.0" onMouseClicked="#selecionarConsultaRemover" prefHeight="428.0" prefWidth="486.0">
 									<columns>
-										<TableColumn fx:id="colunaNomeAnimalRemover"
-											prefWidth="75.0" text="Animal" />
-										<TableColumn fx:id="colunaidAnimalRemover"
-											prefWidth="93.88755798339844" text="ID Animal" />
-										<TableColumn fx:id="colunaNomeVeterinarioRemover"
-											prefWidth="95.33380126953125" text="Veterinário" />
-										<TableColumn fx:id="colunaIdVeterinarioRemover"
-											prefWidth="102.66616821289062" text="ID Veterinario" />
-										<TableColumn fx:id="colunaDataDaConsultaRemover"
-											prefWidth="120.56008911132812" text="Data da Consulta" />
+										<TableColumn fx:id="colunaNomeAnimalRemover" prefWidth="75.0" text="Animal" />
+										<TableColumn fx:id="colunaidAnimalRemover" prefWidth="93.88755798339844" text="ID Animal" />
+										<TableColumn fx:id="colunaNomeVeterinarioRemover" prefWidth="95.33380126953125" text="Veterinário" />
+										<TableColumn fx:id="colunaIdVeterinarioRemover" prefWidth="102.66616821289062" text="ID Veterinario" />
+										<TableColumn fx:id="colunaDataDaConsultaRemover" prefWidth="120.56008911132812" text="Data da Consulta" />
 									</columns>
 								</TableView>
-								<Button layoutX="764.0" layoutY="380.0" mnemonicParsing="false"
-									onAction="#removerConsulta" text="Remover Consulta">
+								<Button layoutX="764.0" layoutY="380.0" mnemonicParsing="false" onAction="#removerConsulta" text="Remover Consulta">
 									<font>
 										<Font size="36.0" />
 									</font>
@@ -292,8 +243,7 @@
 										<Font size="48.0" />
 									</font>
 								</Label>
-								<Button layoutX="1060.0" layoutY="18.0" mnemonicParsing="false"
-									onAction="#voltar" text="Voltar">
+								<Button layoutX="1065.0" layoutY="19.0" mnemonicParsing="false" onAction="#voltar" text="Voltar">
 									<font>
 										<Font size="36.0" />
 									</font>
